fix button consistency on mobile/desktop

--- a/src/scss/partials/_pledge-form.scss
+++ b/src/scss/partials/_pledge-form.scss
@@ -55,6 +55,12 @@
   }
 
   &__btn {
-    margin: 10px 0;    
+    font-family: $font-primary;
+    font-weight: $font-primary-weight;
+    border: 1px solid #a1a1a1;
+    background: #f5f5f5;
+    color: #111;
+    padding: 4px 8px;
+    margin: 0;
   }
 }
